--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/lodash": "^4.17.5",
     "@vueuse/core": "^10.11.0",
     "axios": "^1.7.2",
+    "driver.js": "^1.3.1",
     "element-plus": "^2.7.5",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
