--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
     "@types/lodash": "^4.17.5",
     "@vueuse/core": "^10.11.0",
     "axios": "^1.7.2",
     "driver.js": "^1.3.1",
     "element-plus": "^2.7.5",
+    "highlight.js": "^11.9.0",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
