--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@highlightjs/vue-plugin": "^2.1.0",
     "@types/lodash": "^4.17.5",
     "@vueuse/core": "^10.11.0",
+    "@vueuse/math": "^10.11.0",
     "axios": "^1.7.2",
     "driver.js": "^1.3.1",
     "element-plus": "^2.7.5",
